<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="?android:attr/selectableItemBackground"
              android:clickable="true"
              android:focusable="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@string/item_main_title_name"
            android:textSize="@dimen/max_text_size"/>

        <ImageView
            android:id="@+id/ic_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/item_main_title_content"
        android:textColor="@color/gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/main_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_main_time"
            android:textColor="@color/gray_low"
            android:textSize="@dimen/small_text_size"/>

        <TextView
            android:id="@+id/comment_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/read_number"
            android:text="@string/item_main_comment_number"
            android:textColor="@color/gray_low"
            android:textSize="@dimen/small_text_size"/>

        <TextView
            android:id="@+id/read_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/item_main_read_number"
            android:textColor="@color/gray_low"
            android:textSize="@dimen/small_text_size"/>
    </RelativeLayout>
</LinearLayout>