<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="top"
        android:background="@color/red_shallow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/setting_background"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginRight="45dp"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"

        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shape"
                android:elevation="5dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_arctile_size"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/medium_text_size"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_right_black"
                        android:gravity="right|center_vertical"
                        android:text="小"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <LinearLayout
                    android:id="@+id/update_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_change_version"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/medium_text_size"/>

                    <TextView
                        android:id="@+id/update_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text="v1.0"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <LinearLayout
                    android:id="@+id/clear_cache"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_clear_cache"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/medium_text_size"/>

                    <TextView
                        android:id="@+id/clear_cache_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text="0.0KB"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/setting_get_us"
                android:textSize="@dimen/normal_text_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shape"
                android:elevation="5dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_weixin"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/medium_text_size"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text="琉璃琥"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_xinlang"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/medium_text_size"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text="liuilihu"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_mail"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/medium_text_size"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text="pengsizheng@qq.com"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/setting_other"
                android:textSize="@dimen/normal_text_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shape"
                android:elevation="5dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/share_read_apk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:clickable="true"
                    android:text="@string/share_apk"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/medium_text_size"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <TextView
                    android:id="@+id/share_weixin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:text="@string/share_weixin"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/medium_text_size"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background"/>

                <TextView
                    android:id="@+id/about_opeaner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:text="@string/share_about_opean"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/medium_text_size"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

